# rust-templates

./: README.md  gen.sh  generate
binlib/: Cargo.toml  README.md
binlib/.github/workflows/: ci.yml  release.yml
lib/: Cargo.toml  README.md
lib/.github/workflows/: ci.yml
