[package]
name = "<<name>>"
version = "0.1.0"
authors = <<authors>>
edition = "2021"
description = ""
documentation = "https://docs.rs/<<name>>"
readme = "README.md"
homepage = "https://github.com/<<github>>"
repository = "https://github.com/<<github>>"
license = "MPL-2.0"
keywords = []
categories = []

[dependencies]
